--- a/static/css/utilities.css
+++ b/static/css/utilities.css
@@ -8,6 +8,10 @@
     overflow: auto;
 }
 
+section, footer, .contact-form-container {
+    margin-top: 100px;
+}
+
 .div-border {
     position: absolute;
     width: 100%;
